데이터추출

--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>하이루</title>
+<title>WEATHER MAP</title>
 <link rel="stylesheet" href="./css/css.css">
 </head>
 <body>
-<h1>하이루</h1>
-날짜:<input id="base_date" name="base_date"><br>
-x좌표:<input id="nx" name="nx"><br>
-y좌표:<input id="ny" name="ny"><br>
-<button id="btn1">요청</button><br>
-<textarea id="ta" cols="80" rows="10"></textarea>
+<h1>WEATHER MAP</h1>
+구의동<textarea id="guii" cols="20" rows="1"></textarea><br>
+
+대전<textarea id="daejeon" cols="20" rows="1"></textarea><br>
 <script src="./js/js.js"></script>
 </body>
 </html>
