--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>WEATHER MAP</title>
-<link rel="stylesheet" href="./css/css.css">
+  <meta charset="UTF-8">
+  <title>WEATHER MAP</title>
+  <link rel="stylesheet" href="./css/css.css">
 </head>
+
 <body>
-<h1>WEATHER MAP</h1>
-구의동<textarea id="guii" cols="20" rows="1"></textarea><br>
+  <div id="header">
+    <h1>WEATHER MAP</h1>
+  </div>
+  <div id="main">
+    <div id="daeicon" width="50px" height="50px"></div>
+    <div id="dae"></div>
 
-대전<textarea id="daejeon" cols="20" rows="1"></textarea><br>
-<script src="./js/js.js"></script>
+    <div id="guiiicon" width="50px" height="50px"></div>
+    <div id="guii"></div>
+
+    <img src="./map.jpg" width="1000px" height="900px">
+  </div>
+
+  <script src="./js/js.js"></script>
 </body>
+
 </html>
-
-
-
-
-
