--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,10 +50,14 @@
     <div id="time"></div>
 
     <aside>
-      <img src="image/temp.JPG" id="temp" width="100px" height="100px">  
+      <div id="temp">
+      <img src="image/temp.JPG" id="tempblack" width="100px" height="100px">  
+      <img src="image/tempgray.jpg" id="tempgray" width="100px" height="100px">  
+      </div>
       <div id="wind">
-      <img src="image/wind.JPG" width="100px" height="100px">
-    </div>
+      <img src="image/wind.JPG" id="windblack" width="100px" height="100px">
+      <img src="image/windgray.jpg" id="windgray" width="100px" height="100px">
+      </div>
     </aside>
     <img src="image/map.jpg" width="1000px" height="900px">
   </div>
@@ -62,3 +66,4 @@
 </body>
 
 </html>
+
